# acoustic-codesign

./: .gitignore  README.md  analysis.py  best_params.npz  codesign.py  codesign_core.py  codesign_strings.py  demo.ipynb  environment.yml  export_geometry.py  multistart_lqr.npz  multistart_strings.npz  optimized_plate_lqr.stl  optimized_plate_strings.stl  plots.py  pyproject.toml  requirements.txt  results.json  run_batched.py  run_sweep.py  thickness_field.csv  thickness_field_lqr.csv  thickness_field_strings.csv  verify_gpu.py
outputs/: ablations_lqr.json  optimized_plate_strings.stl  random_baseline_lqr.json  random_baseline_strings.json  results.json
scripts/: analysis.py  export_geometry.py  plot_sweep.py  run_ablation.py  run_batched.py  run_random_baseline.py  run_sweep.py  synth_audio.py  verify_gpu.py
